--- a/scss/style.less
+++ b/scss/style.less
@@ -99,7 +99,10 @@ box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
         background: linear-gradient(180.08deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
 
         &--slide-item {
-            width: 80%;
+            width: 152.36px;
+            height: 3px;
+            margin-bottom: 20px;
+
         }
 
         &::before {
@@ -136,30 +139,71 @@ box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
             background: linear-gradient(207.28deg, #FF0000 9.11%, #CE0000 98.12%);
             border: 3px solid #fff;
             border-radius: 50%;
+
+            &--slide-item{
+                width: 12px;
+                height: 12px;
+            }
         }
     }
 
-.universities-wrap {
+.universities {
     background-image: url('../img/photo/bg_section_1.png');
     background-repeat: no-repeat;
     // background-size: cover;
     background-position: center center;
+
+    &__slider {
+        display: flex;
+        padding: 0 132px
+    }
 }
 
 
 .slider-item {
     border-radius: 12px;
-    max-width: 233px;
-    border: 1px solid Red;
+    // max-width: 233px;
+    border: 1px solid #ccc;
     border-bottom: 5px solid #00369C;
+    text-align: center;
+    font-family: Roboto;
+    margin: 0 20px;
+    background-color: #fff;
 
+&__content{
+    padding: 8px 8px 17px 8px;
+}
 
     &__photo {
-        border-top-right-radius: 12px;
-        border-top-left-radius: 12px;
+        border-radius: 12px;
+        // border-top-left-radius: 12px;
         display: block;
         max-width: 100%;
         object-fit: cover;
+        border-bottom: 3px solid #B8B8B8;
+        // margin-bottom: 8px;
+
+        // background: linear-gradient(144.36deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);;
+
+    }
+
+    &__header{
+        font-style: normal;
+        font-weight: bold;
+        font-size: 15px;
+        line-height: 18px;
+        text-align: center;
+        color: #0031C4;
+        margin-bottom: 8px;
+    }
+
+    &__info {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+
+        color: #6F6F6F;
+        margin-bottom: 20px;
 
     }
 
@@ -169,6 +213,7 @@ box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
 }
 
 .btn {
+    // display: block;
     background: linear-gradient(181.56deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
 border-radius: 18.5px;
 
@@ -182,4 +227,26 @@ text-align: center;
 color: #FFFFFF;
 
 
+}
+
+.opacity {
+    opacity: 0.5;
+}
+
+.slider-line {
+    top: 60px;
+    position: relative;
+    width: 975px;
+    height: 3px;
+    background: linear-gradient(179.84deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
+}
+
+.slider-line-point {
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
 }
