--- a/less/style.less
+++ b/less/style.less
@@ -4,7 +4,10 @@
     box-sizing: border-box;
 }
 
-
+html,
+body {
+  scroll-behavior: smooth;
+}
 
 ul{
     list-style: none;
@@ -61,6 +64,185 @@ a{
         color: #343434;
         transition: 0.3s;
     }
+}
+
+
+// .header-slider {
+//     position: relative;
+//     font-family: Roboto;
+//     background-image: url('../img/photo/pictures_slider.png');
+//     height: 800px;
+//     background-color: #0031C4;
+// }
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.connection-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-slider {
+    overflow: hidden;
+    position: relative;
+    z-index: 2;
+    font-family: Roboto;
+    background: url('../img/photo/slider\ business.png');
+    background-color: #0031C4;
+    color: #FFFFFF;
+    
+
+    &__content {
+        position: relative;
+    }
+
+    &__block {
+        max-width: 425px;
+    }
+
+    &__mail-title {
+        font-style: italic;
+        font-weight: 500;
+        font-size: 85px;
+        text-transform: uppercase;
+        margin-bottom: 19px;
+    }
+
+    &__subtitle {
+        font-style: italic;
+        font-weight: bold;
+        font-size: 37px;
+        color: #FF0000;
+    }
+
+    &__info {
+        font-size: 14px;
+        color: #FFFFFF;
+        letter-spacing: -0.02em;
+        margin-bottom: 50px;
+    }
+
+    &__nav {
+        margin-top: 40px;
+        padding-bottom: 30px;
+       max-width: 70px;
+        &-item {
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: 900;
+            font-size: 15px;
+            line-height: 18px;
+            color: #FFFFFF;
+            border-left: 3px solid rgba(255,255,255, 0.8);
+            opacity: 0.8; 
+        }
+
+        &-num {
+            display: block;
+            padding: 12px 18px;
+            text-align: center;
+
+        }
+    }
+}
+
+.subtitle-wrap {
+    display: flex;
+    margin-bottom: 25px;
+    .dots-img {
+        margin-right: 15px;
+    }
+}
+
+.header-slider__nav-item--active {
+    border-left: 5px solid rgba(255,255,255, 1);
+    font-size: 27px;
+margin-left: -1px;}
+
+.header-subtitle-decorate {
+    margin-left: -50px;
+}
+
+.square-decorate {
+    z-index: -1;
+    position: absolute;
+    width: 1178.66px;
+    height: 954.03px;
+    
+    background: linear-gradient(274.44deg, #0066FF -9.04%, #00369C 41.93%);
+    border-radius: 28px;
+    opacity: 0.9;
+    transform: rotate(138deg);   
+    border: 47px solid  rgba(0, 150, 235, 0.4);
+    left: -138px;
+    top: -181px;
+}
+
+
+.social-nav {
+    position: absolute;
+    top: 50%;
+    right: -37px;
+    transform: translate(0, -50%);
+   
+    &__main {
+       position: absolute;
+       top: -20px;
+        left: -5px;
+        z-index: 2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 47px;
+        height: 47px;
+        border-radius: 50%;
+        background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+    }
+
+    &__list {
+        position: relative;
+        background: rgba(0, 0, 0, 0.45);
+        border-radius: 17px;
+        padding: 40px 7px 18px 7px;
+    }
+    &__item {
+        display: inline-flex;
+        margin-bottom: 14px;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.assistent-slider-wrap {
+    position: relative;
+}
+.header-assistent-slider {
+    position: absolute;
+    top: -128px;
+    left: 50%;
+    max-width: 835px;
+    margin: 0 auto;
+    display: flex;
+    z-index: 2;
+    transform: translate(-50%, 0);
+    
+    // position: relative;
+    // bottom: -40px;
+    // left: 50%;
+    // transform: translate(-50%, 0);
+}
+
+.assistent-slider-item {
+    max-width: 266px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 22px;
+    margin: 0 10px;
 }
 
 .title-block {
@@ -140,6 +322,7 @@ a{
     }
 
 .universities {
+    margin-top: 140px;
     background-image: url('../img/photo/bg_section_1.png');
     background-repeat: no-repeat;
     background-position: center center;
@@ -147,6 +330,9 @@ a{
     &__slider {
         display: flex;
         align-items: center;
+        .slick-track {
+            padding: 50px 0;
+        }
       
     }
 }
@@ -224,6 +410,12 @@ a{
     text-align: center;
     color: #FFFFFF;
 
+    &--header-slider {
+        padding: 7.5px 40px;
+        background: linear-gradient(185.59deg, #FF0000 9.11%, #CE0000 98.12%);
+        border-radius: 18.5px;
+    }
+
     &--posive {
         background: linear-gradient(165.36deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
@@ -236,8 +428,9 @@ a{
         padding: 9px 20px;
         font-size: 20px;
         border: none;
-
     }
+
+
 }
 
 .opacity {
@@ -245,16 +438,13 @@ a{
 }
 
 .slider-line {
-   
     position: relative;
     width: 80%;
     height: 3px;
     background: linear-gradient(179.84deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
 }
 
-.slick-track {
-    padding: 50px 0;
-}
+
 
 .slider-line-point {
     top: 50%;
@@ -528,11 +718,18 @@ a{
 
 
 //feedback
-
+.feedback {
+    background: url('../img/photo/feedback-bg.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+}
 .feedback-slider {
     border: 6px solid #0031C4;
     max-width: 935px;
     position: relative;
+    .slick-list {
+        margin: 0;
+    }
 }
 
 
@@ -544,45 +741,44 @@ a{
     left: 38px;
 }
 .feedback-item {
-    display: flex;
-    
     margin: 46px 50px;
     padding: 23px 35px;
     background: #FFFFFF;    
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
     border-radius: 14px;
-    &__img {
-        display: block;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    color: #0031C4;
+
+    &__inner {
+        display: flex;
     }
+
+    &__img {
+        position: relative;
+        bottom: 40px;
+        display: block;
+        border-radius: 28px;
+        border-right: 4px solid #0031C4;
+        border-bottom: 4px solid #0031C4;
+        margin-right: 35px;
+    }
+    
     &__title {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: bold;
         font-size: 22px;
-        line-height: 133.3%;
-    
-    
-        color: #0031C4;
+     
+        margin-bottom: 15px;
     }
 
     &__subtitle {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 500;
         font-size: 12px;
-        line-height: 133.3%;
-        /* or 16px */
+        margin-bottom: 15px;
     }
 
     &__text {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 500;
         font-size: 14px;
-        line-height: 16px;
-        
         color: #6F6F6F;
-        
     }
 
 }
@@ -590,7 +786,42 @@ a{
 // footer
 
 .footer {
+    // padding-top: 65px;
+    // position: relative;
     background: linear-gradient(177.39deg, #0066FF -13.52%, #00318E 32.41%);
+}
+.telephones {
+    position: relative;
+    // display: inline-flex;
+    // top: -30px;
+    // left: 50%;
+    // transform: translate(-50%, 0);
+    // background:#0052d3;
+    // background: #004ecb; 
+    // z-index: -1;
+
+    border-radius: 30px;
+    padding: 12px 90px 17px;
+
+    &::before{
+        content: "";
+        width: 100px;
+        height: 100px;
+        //  background: #004ecb; 
+        background-color: red;
+    }
+   
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        margin-left: 33px;
+    }
+
+    &__link {
+        font-size: 23px;
+        color: #FFFFFF;
+        
+    }
 }
 
 .upBtn {
@@ -598,20 +829,99 @@ a{
     bottom: 0;
     display: none;
     justify-content: center;
-    img {
+    cursor: pointer;
+  
+    .upArrow {
+        position: relative;
         display: block;
         margin-bottom: 20px;
+        animation: animat 1s infinite;
     }
+}
+
+.form-title {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.footer-form {
+    padding-bottom: 40px;
+    border-bottom: 2px solid #fff;
+    display: flex;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    color: #FFFFFF;
+    &__input {
+        padding: 12px 0 12px 15px;
+        background: #FFFFFF;
+        border: 1px solid #BDBDBD;
+        box-sizing: border-box;
+        border-radius: 30px; 
+    }
+  
 }
 
 .footer-items {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
 
 .footer-item {
     flex-basis: 232px;
+    color: #FFFFFF; 
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+
+    &__text {
+        font-size: 14px;
+        text-align: justify;
+       
+    }
+    &__title {
+        position: relative;
+        font-size: 25px;
+        margin-bottom: 22px;
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: -10px;
+            width: 100%;
+            height: 2px;
+            background-color: #fff;
+        }
+    }
+
+    &__subtitle {
+        position: relative;
+        font-size: 19px;
+        margin-bottom: 24px;
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: -10px;
+            width: 34px;
+            height: 2px;
+            background-color: #fff;
+        }
+    }
+
+    &__link {
+        font-size: 12px;
+        color: #FFFFFF; 
+        margin-bottom: 8px;
+    }
 }
+
+
 // copiright
 
 .copiright {
@@ -621,4 +931,14 @@ a{
     text-align: center;
     color: #FFFFFF;
     background: #001C53;
+}
+
+
+@keyframes animat{
+    from{
+        top: -20px;
+    }
+    to{
+        top: 0;    
+    }
 }
